# file-retention-policy

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: config.toml  consul.lines  hub.lines  postgres.lines  upsource.lines
src/: args.rs  config.rs  file.rs  main.rs  policy.rs
