[package]
name = "file-retention-policy"
version = "0.1.0"
edition = "2021"

[dependencies]
# Argument parsing
clap = { version = "4", features = ["derive"] }
# Error reporting and logging
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
# Mapping Config
toml = "0.8"
serde = { version = "1", features = ["derive"] }
# Date parsing
chrono = "0.4"
regex = "1.10"

[dev-dependencies]
test-case = "3.3"

# Build dependencies with release optimizations for debug builds
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
opt-level = "s"
lto = true
